# treinaweb-clean-architecture-python-example

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
clean_arch_python/application/gateways/: client_gateways.py
clean_arch_python/application/usecases/: client_usecases.py
clean_arch_python/enterprise/entities/: client.py  cpf.py  email.py
clean_arch_python/infra/controllers/: __init__.py  client_controllers.py
clean_arch_python/infra/db/: mysql_db.py
clean_arch_python/infra/gateways/: client_gateways.py
clean_arch_python/infra/presenters/: client_presenters.py
clean_arch_python/infra/web/: http.py
clean_arch_python/main/: fastapi_app.py  flask_app.py
clean_arch_python/main/adapters/: fastapi_adapter.py  flask_adapter.py
clean_arch_python/main/factories/: client_factory.py
tests/: test_clean_arch_python.py
tests/application_test/usecases_test/: test_client_usecase.py
tests/enterprise_test/entities_test/: test_client.py  test_cpf.py  test_email.py
tests/infra_test/controllers_test/: test_client_controllers.py
tests/infra_test/gateways_test/: test_client_inmemory.py
tests/infra_test/presenters_test/: test_client_presenters.py
